# HyperFaaS

./: .dockerignore  .gitignore  README.md  compose.yaml  debianworker.Dockerfile  fakeworker.Dockerfile  go.mod  go.sum  justfile  pull-metrics.sh  worker.Dockerfile
benchmarks/: analyse.py  analysis.py  column_names.py  data_loader.py  import.py  import_metrics.py  main.py  new_import.py  o.csv  plot.py  process.py
benchmarks/configs/: 10m.yaml  local.yaml
cmd/leaf/: main.go
cmd/load-generator/: main.go
cmd/metrics-client/: main.go
cmd/worker/: main.go
hyperFakeModel/: README.md  README_PARAMETERS.md  merge_all_onnx.sh  onnx_recombiner.py
hyperFakeModel/baselineModel/: baseline-model.py
hyperFakeModel/examples/: README.md
hyperFakeModel/linear-training/: README.md  pyproject.toml  train_models.py
hyperFakeModel/neural-network/: .dockerignore  Dockerfile  PERFORMANCE.md  README.md  job.yaml.template  justfile  neural-network.py  neural_net_cli.py  neural_network.py  neural_network_v2.py  requirements.txt  test-onnx-export.py
hyperFakeModel/random-forest/: README.md  bfs.onnx  echo.onnx  pyproject.toml  random_forest.py  test_models.py  thumbnailer.onnx
hyperFakeModel/ridge-regression/: README.md  pyproject.toml  ridge_regression.py
hyperFakeWorker/: README.md  justfile  pyproject.toml
hyperFakeWorker/models/: hyperfaas-bfs-json.onnx  hyperfaas-echo.onnx  (+1 more)
linear-training/: main.py  models.json  train_models.py
load-generator/: .gitignore  justfile  metrics.js  register-functions.js  script-sequential.js  script.js  shared-data.js
(+178 files in other folders)
