[project]
name = "random-forest-model"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "skl2onnx==1.15.0",
    "onnx==1.15.0",
    "protobuf==3.20.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "tqdm-joblib>=0.0.0.post1",
    "onnxruntime>=1"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [] 